Reviewed and commented stylesheet

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -8,23 +8,23 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+.header { /*turn into a element selector*/
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+.header h1 { /*idem*/
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+.header h1 .seo { /*idem*/
     color: #d9dcd6;
 }
 
-.header div {
+.header div { /*turn into element selector substitute div for nav*/
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header div ul { /*idem*/
     list-style-type: none;
 }
 
-.header div ul li {
+.header div ul li { /*idem*/
     display: inline-block;
     margin-left: 25px;
 }
@@ -91,27 +91,27 @@ p {
     color: #ffffff;
 }
 
-.benefit-brand {
+.benefit-brand {            /*repetitive code, unify in only one class*/
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-cost {
+.benefit-cost {             /*idem*/
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-lead h3 {
+.benefit-lead h3 { 
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
+.benefit-brand h3 { /*idem*/
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-cost h3 {
+.benefit-cost h3 {  /*idem*/
     margin-bottom: 10px;
     text-align: center;
 }
@@ -122,13 +122,13 @@ p {
     max-width: 150px;
 }
 
-.benefit-brand img {
+.benefit-brand img {  /*idem*/
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-cost img {
+.benefit-cost img {   /*idem*/
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -143,7 +143,7 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
+.online-reputation-management {   /*idem*/
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -152,7 +152,7 @@ p {
     color: #ffffff;
 }
 
-.social-media-marketing {
+.social-media-marketing {   /*idem*/
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -165,30 +165,30 @@ p {
     max-height: 200px;
 }
 
-.online-reputation-management img {
+.online-reputation-management img {   /*idem*/
     max-height: 200px;
 }
 
-.social-media-marketing img {
+.social-media-marketing img {    /*idem*/
     max-height: 200px;
 }
 
-.search-engine-optimization h2 {
+.search-engine-optimization h2 {   
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
+.online-reputation-management h2 {   /*idem*/
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.social-media-marketing h2 {
+.social-media-marketing h2 {     /*idem*/
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.footer {
+.footer {  /*turn into a element selector*/
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
