--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -8,23 +8,23 @@ body {
     background-color: #d9dcd6;
 }
 
-.header { /*turn into a element selector*/
+header { 
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 { /*idem*/
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo { /*idem*/
+header h1 span { 
     color: #d9dcd6;
 }
 
-.header div { /*turn into element selector substitute div for nav*/
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,8 @@ body {
     font-size: 20px;
 }
 
-.header div ul { /*idem*/
+header nav ul, li { /*check with tutor to see if the "li" is also being influenced the header nav part*/
     list-style-type: none;
-}
-
-.header div ul li { /*idem*/
     display: inline-block;
     margin-left: 25px;
 }
@@ -50,7 +47,18 @@ p {
     font-size: 16px;
 }
 
-.hero {
+footer {
+    padding: 30px;
+    clear: both;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}
+
+footer h2 {
+    font-size: 20px;
+}
+
+#hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -58,24 +66,15 @@ p {
     background-size: cover;
     background-position: center;
 }
-
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-.float-right {
-    float: right;
-    margin-left: 25px;
-}
-
-.content {
+/*consultar si en vez de crear dos id selectors seria mejor usar element selectors ya que 
+que solo uso esos dos id-s en aside y en main*/
+#content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-.benefits {
+#benefits {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -86,115 +85,49 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-brand {            /*repetitive code, unify in only one class*/
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {             /*idem*/
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 { 
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 { /*idem*/
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {  /*idem*/
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {  /*idem*/
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {   /*idem*/
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
+.services {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
-}
+}    
 
-.online-reputation-management {   /*idem*/
+.services img {
+    max-height: 200px;
+}    
+
+.services h2 {   
     margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
+    font-size: 36px;
+}    
+
+.float-left {
+    float: left;
+    margin-right: 25px;
+}    
+
+.float-right {
+    float: right;
+    margin-left: 25px;
+}    
+
+.benefit {
+    margin-bottom: 32px;
     color: #ffffff;
 }
 
-.social-media-marketing {   /*idem*/
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {   /*idem*/
-    max-height: 200px;
-}
-
-.social-media-marketing img {    /*idem*/
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {   
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {   /*idem*/
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {     /*idem*/
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.footer {  /*turn into a element selector*/
-    padding: 30px;
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+.benefit h3 { 
+    margin-bottom: 10px;
     text-align: center;
 }
 
-.footer h2 {
-    font-size: 20px;
+.benefit img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
 }
+
+/*consultar si es mejor dejar las clases en el orden que aparecen en el html u ordenarlas segun
+los diferentes tipos de selectors*/
