--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,10 @@
+/* Universal Selector */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
-
+/* Element Selectors */
 body {
     background-color: #d9dcd6;
 }
@@ -24,7 +25,7 @@ header h1 span {
     color: #d9dcd6;
 }
 
-header nav {
+nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,7 +33,7 @@ header nav {
     font-size: 20px;
 }
 
-header nav ul, li { /*check with tutor to see if the "li" is also being influenced the header nav part*/
+li {
     list-style-type: none;
     display: inline-block;
     margin-left: 25px;
@@ -57,7 +58,7 @@ footer {
 footer h2 {
     font-size: 20px;
 }
-
+/* ID Selectors */
 #hero {
     height: 800px;
     width: 100%;
@@ -66,8 +67,7 @@ footer h2 {
     background-size: cover;
     background-position: center;
 }
-/*consultar si en vez de crear dos id selectors seria mejor usar element selectors ya que 
-que solo uso esos dos id-s en aside y en main*/
+
 #content {
     width: 75%;
     display: inline-block;
@@ -84,7 +84,7 @@ que solo uso esos dos id-s en aside y en main*/
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+/* Class selectors */
 .services {
     margin-bottom: 20px;
     padding: 50px;
@@ -128,6 +128,3 @@ que solo uso esos dos id-s en aside y en main*/
     margin: 10px auto;
     max-width: 150px;
 }
-
-/*consultar si es mejor dejar las clases en el orden que aparecen en el html u ordenarlas segun
-los diferentes tipos de selectors*/
